--- a/netlify.toml
+++ b/netlify.toml
@@ -17,3 +17,18 @@
     "VITE_FIREBASE_MEASUREMENT_ID",
     "VITE_RECAPTCHA_SITE_KEY"
   ]
+
+# Additional build settings
+[build.processing]
+  skip_processing = false
+
+[build.processing.css]
+  bundle = true
+  minify = true
+
+[build.processing.js]
+  bundle = true
+  minify = true
+
+[build.processing.html]
+  pretty_urls = true
